--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -8,6 +14,28 @@ ul {
 }
 a {
   text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+ul {
+  margin: 0;
+  padding-left: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1128;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  border: 2px dashed hsl(352, 91%, 46%);
 }
 
 /*Navigation bar*/
@@ -131,6 +159,11 @@ a {
 .team-list {
   background-color: #ffffff;
 }
+.photo {
+  display: inline-flex;
+  padding-bottom: 32px;
+  background-color: aqua;
+}
 
 .team-title-name {
   color: #2e2f42;
@@ -139,12 +172,16 @@ a {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
+  padding-bottom: 8px;
+  background-color: aqua;
 }
 .team-title-pos {
   text-align: center;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  padding-bottom: 32px;
+  background-color: aqua;
 }
 
 /*Section 4 Our Portfolio*/
