--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,10 @@ img {
 
 .container {
   width: 100%;
-  max-width: 1158;
+  max-width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  border: 2px dashed hsl(352, 91%, 46%);
 }
 
 /*Navigation bar*/
@@ -71,7 +70,6 @@ img {
   display: flex;
   align-items: center;
   flex-grow: 1;
-  margin-right: 332px;
 }
 
 .links {
@@ -113,7 +111,7 @@ img {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.32px;
-  width: calc((100% - 40px) / 2);
+  gap: 40px;
 }
 .contacts-links-info {
   display: flex;
@@ -181,7 +179,7 @@ img {
   gap: 24px;
 }
 .content-item {
-  width: calc((100% - 24px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .desc-title {
   color: #2e2f42;
@@ -202,7 +200,6 @@ img {
   width: 264px;
   height: 380px;
   padding-bottom: 32px;
-  border: 2px dashed red;
 }
 .container-team-img {
   height: 100%;
@@ -213,6 +210,9 @@ img {
 .team {
   background-color: #f4f4fd;
 }
+.team-title-container {
+  height: 732px;
+}
 .team-title {
   color: #2e2f42;
   text-align: center;
@@ -221,9 +221,12 @@ img {
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+  margin-top: 120px;
+  margin-bottom: 72px;
 }
 .team-list-container {
   display: flex;
+  justify-content: space-between;
   width: calc((100% - 72px) / 4);
 }
 .team-list {
@@ -260,7 +263,6 @@ img {
   width: calc((100% - 96px) / 6);
   height: 420px;
   padding-bottom: 32px;
-  border: 2px dashed red;
 }
 .container-portfolio-card {
   height: 100%;
@@ -277,11 +279,14 @@ img {
 }
 .portfolio-title {
   color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
   font-size: 36px;
   font-weight: 700;
   line-height: 2.51; /* 120% */
   letter-spacing: 0.4px;
   text-transform: capitalize;
+  margin-top: 240px;
+  margin-bottom: 72px;
 }
 .portfolio-name {
   color: #2e2f42;
@@ -325,4 +330,4 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
 }
-/*2024 01 19*/
+/*2024 01 27*/
