--- a/css/styles.css
+++ b/css/styles.css
@@ -282,21 +282,21 @@ img {
   column-gap: 24px;
   row-gap: 48px;
 }
-.container-portfolio {
+/*.container-portfolio {
   width: calc((100% - 48px) / 3);
   height: 420px;
   padding-bottom: 32px;
-}
-.container-portfolio-card {
+}*/
+/*.container-portfolio-card {
   height: 100%;
   height: 300px;
   width: 100%;
   object-fit: cover;
-}
-.container-portfolio-content {
+}*/
+/*.container-portfolio-content {
   width: 360px;
   height: 56px;
-}
+}*/
 .portfolio-nampar {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
