--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ ul {
   margin: 0;
   padding-left: 0;
 }
+
 img {
   display: block;
 }
@@ -324,6 +325,7 @@ img {
   font-weight: 500;
   line-height: 1.2; /* 120% */
   letter-spacing: 0.4px;
+  margin-bottom: 8px;
 }
 .portfolio-par {
   font-size: 16px;
