--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@ body {
   color: #434455;
   background-color: #fff;
 }
+
+img {
+  display: block;
+}
+
 ul {
   list-style-type: none;
 }
@@ -26,11 +31,8 @@ p {
 }
 ul {
   margin: 0;
+  margin-bottom: 0;
   padding-left: 0;
-}
-
-img {
-  display: block;
 }
 
 .container {
@@ -61,6 +63,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  padding: 24px 0;
   margin-right: 76px;
 }
 
@@ -180,13 +183,8 @@ img {
   line-height: 1.2;
   padding: 120px 0;
 }
-.visually-hidden {
+.visualy-hidden {
   visibility: hidden;
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
 }
 
 .content-container {
