--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ img {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 a {
   text-decoration: none;
@@ -28,11 +31,6 @@ h5,
 h6,
 p {
   margin: 0;
-}
-ul {
-  margin: 0;
-  margin-bottom: 0;
-  padding-left: 0;
 }
 
 .container {
@@ -121,6 +119,7 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.32px;
   gap: 40px;
+  padding: 24px 0;
 }
 .contacts-links-info {
   display: flex;
@@ -281,21 +280,10 @@ ul {
   column-gap: 24px;
   row-gap: 48px;
 }
-/*.container-portfolio {
-  width: calc((100% - 48px) / 3);
-  height: 420px;
-  padding-bottom: 32px;
-}*/
-/*.container-portfolio-card {
-  height: 100%;
-  height: 300px;
-  width: 100%;
-  object-fit: cover;
-}*/
-/*.container-portfolio-content {
-  width: 360px;
-  height: 56px;
-}*/
+
+.portfolio-item {
+  width: calc((100%-48px) / 3);
+}
 .portfolio-nampar {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
