--- a/css/styles.css
+++ b/css/styles.css
@@ -10,16 +10,17 @@ body {
   background-color: #fff;
 }
 
-img {
-  display: block;
-}
-
 ul {
   list-style-type: none;
   margin: 0;
   margin-bottom: 0;
   padding-left: 0;
 }
+
+img {
+  display: block;
+}
+
 a {
   text-decoration: none;
 }
@@ -82,8 +83,11 @@ p {
   line-height: 1.5;
   letter-spacing: 0.32px;
   flex-grow: 1;
-  padding: 24px 0;
   gap: 40px;
+}
+
+.links-item {
+  padding: 24px 0;
 }
 .akt-link {
   padding: 24px 0;
@@ -119,7 +123,6 @@ p {
   line-height: 1.5;
   letter-spacing: 0.32px;
   gap: 40px;
-  padding: 24px 0;
 }
 .contacts-links-info {
   display: flex;
@@ -209,11 +212,7 @@ p {
 }
 
 /*Section 3 Our Team*/
-/*.container-team {
-  width: 264px;
-  height: 380px;
-  padding-bottom: 32px;
-}*/
+
 .container-team-img {
   height: 100%;
   height: 260px;
@@ -282,7 +281,7 @@ p {
 }
 
 .portfolio-item {
-  width: calc((100%-48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 .portfolio-nampar {
   padding: 32px 16px;
