--- a/css/styles.css
+++ b/css/styles.css
@@ -83,13 +83,19 @@ p {
   line-height: 1.5;
   letter-spacing: 0.32px;
   flex-grow: 1;
+  list-style-type: none;
   gap: 40px;
 }
 
-.links-item {
+.akt-link {
   display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
+  color: #2e2f42;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  text-decoration: none;
 }
 
 .links .link {
