--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 *,
 *::before,
 *::after {
+  box-sizing: border-box;
 }
 
 body {
@@ -260,10 +261,7 @@ img {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
-.photo {
-  display: inline-flex;
-  padding-bottom: 32px;
-}
+
 .team-name {
   padding: 32px 0;
 }
